@@ -11,6 +11,7 @@
   replaced with Color::scale_lch_luminance.
 - Added 'reduce' options to prop::Allocation property.
 - Added 'reduce' options handling by tk::Box and tk::Grid widgets.
+- Fixed bug in prop::StringList which could yield to ignore of localization parameters.
 
 === 0.5.1 ===
 * Updated code to match lltl library headers.
